compiler/kernc_cli/tests/soundness/reject/coherence/conflicting_associated_type_proofs.rn
// class: coherence
// source: Kern issue inspired by Rust coherence / associated-type ambiguity bugs
// stderr: overlapping trait impls are not allowed
// stderr: globally coherent
// stderr: associated type projection ambiguous

trait TypeIs[T] {
    type Is;
};

struct Proof[L, R] {};

impl[L, R] Proof[L, R]: TypeIs[L] {
    type Is = L;
}

impl[L, R] Proof[L, R]: TypeIs[R] {
    type Is = L;
}

impl[L, R] Proof[L, R]: TypeIs[R] {
    type Is = R;
}

fn rewrite[RW, R](value: RW.TypeIs[R].Is) R
    where RW: TypeIs[R, Is = R],
{
    return value;
}

fn cast[L, R](value: L) R
    where Proof[L, R]: TypeIs[L, Is = L],
          Proof[L, R]: TypeIs[R, Is = R],
{
    return rewrite[Proof[L, R], R](value);
}

fn main() i32 {
    _ = cast[bool, i32](true);
    return 0;
}
